Fix display on IE again.

--- a/src/scss/Sections/Skills/HexagonGrid.scss
+++ b/src/scss/Sections/Skills/HexagonGrid.scss
@@ -43,9 +43,9 @@
     @include create-offset($hex);
 }
 
-@function calc-padding-hack($hex-per-row) {
-    @return percentage(100 / 86.6025403784 * (1 / $hex-per-row) - 0.01);
-}
+// @function calc-padding-hack($hex-per-row) {
+//     @return percentage(100 / 86.6025403784 * (1 / $hex-per-row) - 0.01);
+// }
 
 section#skills {
     ul.hex-grid {
@@ -57,14 +57,6 @@ section#skills {
         flex-direction: row;
         flex-wrap: wrap;
         justify-content: start;
-    }
-
-    .hexagon {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        padding: 0 0.1rem;
     }
 
     .skill {
@@ -84,30 +76,36 @@ section#skills {
             @include skill-container-size(landscape);
         }
 
-        // Fixes two Internet Explorer bugs in calculating heights and widths
-        @include for-ie {
-            height: 0;
-            margin-bottom: 5px;
+        .hexagon {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            padding: 0 0.1rem;
 
-            @include for-mobile {
-                padding-top: calc-padding-hack(hex-per-row(mobile));
-            }
+            // Fixes two Internet Explorer bugs in calculating heights and widths
+            @include for-ie {
+                height: 0px;
+                margin-bottom: 5px;
+                padding-top: 110%;
 
-            @include for-tablet-portrait-up {
-                padding-top: calc-padding-hack(hex-per-row(portrait));
+                >svg {
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    width: 100%;
+                    height: 100%;
+                }
             }
+        }
     
-            @include for-tablet-landscape-up {
-                padding-top: calc-padding-hack(hex-per-row(landscape));
-            }
-
-            >svg {
-                position: absolute;
-                top: 0;
-                left: 0;
-                width: 100%;
-                height: 100%;
-            }
+        .icon {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            color: white;
+            z-index: 1;
+            transform: translateX(-50%) translateZ(0) scale(1.0, 1.0);
         }
     }
 }
